--- a/config.json
+++ b/config.json
@@ -15,14 +15,14 @@
             "LOCATION_COUNTY_CODE": "",
             "LOCATION_COUNTY_CODE_DISPLAY": "",
             "DZ_SZXQ": "002",
-            "DZ_SZXQ_DISPLAY": "九龙湖校区"
+            "DZ_SZXQ_DISPLAY": "四牌楼校区"
         },
         "home": {
             "DZ_JSDTCJTW": 36.555,
             "DZ_SZWZLX": "003",
             "DZ_SZWZLX_DISPLAY": "在校外(在南京以外)",
             "LOCATION_PROVINCE_CODE": "110100",
-            "LOCATION_PROVINCE_CODE_DISPLAY": "北京市",
+            "LOCATION_PROVINCE_CODE_DISPLAY": "安徽省",
             "LOCATION_CITY_CODE": "110100",
             "LOCATION_CITY_CODE_DISPLAY": "北京市",
             "LOCATION_COUNTY_CODE": "110101",
