--- a/config.json
+++ b/config.json
@@ -21,11 +21,11 @@
             "DZ_JSDTCJTW": 36.555,
             "DZ_SZWZLX": "003",
             "DZ_SZWZLX_DISPLAY": "在校外(在南京以外)",
-            "LOCATION_PROVINCE_CODE": "110100",
+            "LOCATION_PROVINCE_CODE": "237000",
             "LOCATION_PROVINCE_CODE_DISPLAY": "安徽省",
-            "LOCATION_CITY_CODE": "110100",
-            "LOCATION_CITY_CODE_DISPLAY": "北京市",
-            "LOCATION_COUNTY_CODE": "110101",
+            "LOCATION_CITY_CODE": "237000",
+            "LOCATION_CITY_CODE_DISPLAY": "六安市",
+            "LOCATION_COUNTY_CODE": "237010",
             "LOCATION_COUNTY_CODE_DISPLAY": "市辖区",
             "DZ_SZXQ": "",
             "DZ_SZXQ_DISPLAY": ""
